# spark-skills

./: .env_example  .gitignore  README.md  README_old.md  pdi_rerun_tasks.txt  pyproject.toml  run_eval_skills.py  run_pipeline.py  run_tasks_gen.py  spark_pdi_trajectory_README.md  token_budgets.json
scripts/: make_case1_lean4_gif.py  make_exploration_dynamics_gif.py  redact_secrets.sh  run_bare_test.sh  run_eval_skills.sh  run_skills_gen.sh  run_tasks_gen.sh  validate_eval_results.py
spark_skills_gen/: __init__.py  _utils.py  context.py  evaluator.py  executor.py  judge.py  pipeline.py  prompts.py  skill_evidence.py  summarizer.py  task_blacklist.py  task_blacklist.txt  token_budgets.py  trajectory.py
spark_skills_gen/dashboard/: __init__.py  app.py  index.html
spark_skills_gen/skills_gen_result/all_model/: pipeline_summary.json
spark_skills_gen/skills_gen_result/all_model/3d-scan-calc/: SKILL.md  attempts.json  trajectory.jsonl
spark_skills_gen/skills_gen_result/all_model/adaptive-cruise-control/: SKILL.md  attempts.json  trajectory.jsonl
spark_skills_gen/skills_gen_result/all_model/citation-check/: SKILL.md  attempts.json  trajectory.jsonl
spark_skills_gen/skills_gen_result/all_model/civ6-adjacency-optimizer/: attempts.json  error_report.md  trajectory.jsonl
spark_skills_gen/skills_gen_result/all_model/court-form-filling/: SKILL.md  attempts.json  trajectory.jsonl
spark_skills_gen/skills_gen_result/all_model_pdi/: pipeline_summary.json
spark_tasks_gen/: __init__.py  llm.py  models.py  pipeline.py  prompts.py  renderer.py  tools_pool.py  validator.py
spark_tasks_gen/examples/: 3d_scan_calc_prompt.json  wav_amplitude_prompt.json  weather_anomaly_prompt.json
(+376 files in other folders)
